[package]
authors = ["Simon Cambier <simon.cambier@protonmail.com>"]
edition = "2018"
name = "tq-bundler"
version = "2.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.2"
ctrlc = "3.1.9"
notify = "4.0.17"
regex = "1.5.4"
rust-embed = "5.9.0"

[profile.release]
strip = true # strip symbols
# optimize for size
opt-level = "z"
lto = true
codegen-units = 1
# panic = 'abort'
