[package]
authors = ["Simon Cambier <simon.cambier@protonmail.com>"]
edition = "2021"
name = "tq-bundler"
version = "2.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
clap = "3.2"
ctrlc = "3.1.10"
notify = "4.0.18"
regex = "1.5.6"
rust-embed = "8.5.0"

[profile.release]
strip = true # strip symbols
# optimize for size
opt-level = "z"
lto = true
codegen-units = 1
# panic = 'abort'
